# trestle

./: .editorconfig  .gitignore  .release-review.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  codecov.yml  justfile  release-plz.toml
crates/olai-codegen/: CHANGELOG.md  Cargo.toml  README.md  buf.gen.yaml
crates/olai-codegen/docs/: codegen-design.md
crates/olai-codegen/proto/: example_models.proto  example_repeated_params.proto  example_schemas.proto  example_service.proto  example_tag_assignments.proto
crates/olai-codegen/src/: error.rs  lib.rs  openapi_enrich.rs  output.rs  utils.rs
crates/olai-codegen/src/analysis/: mod.rs  types.rs
crates/olai-codegen/src/codegen/: aggregate.rs  builder.rs  client.rs  config.rs  connect_client.rs  handler.rs  mod.rs  resource_client.rs  resources.rs  server.rs  tokens.rs
crates/olai-codegen/src/parsing/: enum_parser.rs  http.rs  message.rs  mod.rs  models.rs  service.rs  types.rs
crates/olai-codegen/tests/: analysis_integration.rs  codegen_integration.rs  connect_integration.rs  generation_integration.rs  golden_integration.rs  openapi_enrich_integration.rs  parsing_integration.rs
crates/olai-codegen/tests/buffa_e2e/: Cargo.toml  README.md  build.rs
crates/olai-http/: CHANGELOG.md  Cargo.toml  README.md
crates/olai-http-wasm/: CHANGELOG.md  Cargo.toml  README.md
crates/olai-http-wasm/src/: lib.rs  token.rs
crates/olai-http/src/: backoff.rs  client.rs  connectrpc.rs  lib.rs  retry.rs  service.rs  token.rs
crates/olai-http/src/aws/: builder.rs  credential.rs  mod.rs
crates/olai-http/src/azure/: builder.rs  credential.rs  sas.rs
crates/olai-http/src/databricks/: builder.rs  cfg_file.rs  credential.rs
crates/olai-http/src/gcp/: builder.rs  credential.rs
crates/olai-store/: CHANGELOG.md  Cargo.toml  README.md
crates/olai-store/.sqlx/: query-0f378c199e25f11197c73bde4b35cde43c604509f8862f236c65876ef9acad5b.json  query-1cabb0fa2f66b3ac06b9c50aeec3dcc2a368af59f9e485a86fc3b2b77c57adf0.json  query-1db58d5f0882f3153bd63765be655eda11997a86e5250fb6a92fad598b2295fb.json  query-1fe0f511e1f7a2251a861114ef22f2102a0dbb8a4e5f4a6c521bc53ccff04d19.json  query-27f27d4f4d648401a1709ca9c7b8d66d0e7f97ced256d150aa1550629fb0d012.json  query-4b76e87a96e298dff73ac92dcda29cbfcebee6b1b5de775d27f6e55df7791465.json  query-4bc08a1608cf9f6cad1e6e71663aa4f5905cda3fbcb4e4e9f01621a08c1137ef.json  query-53d229be2db188d301e4bc30fa5967a53c6b5f744cb563d900c951234e3607d5.json  query-5f67bdf1ec7b3dddc1eaca3a9675e9e4aef6a0cf7b72a377c52928c507a42179.json  query-6b8eff9661f9d1276e29e1504583993c9b92fff5c81df8039eb03ab306dbef1c.json  query-6d3c45f25f1267f0b582ab8508d5be0b8de45c5e4639d073385a3eb1829c259c.json  query-6e8e1d196b3ffb46df6e6637d06b702f9e1e59d95ceb6d8e462c8bdb58c11caf.json  query-6fe72003fe8b39a294c17eeb2fb0ac99dc826bb45689ff69996d9f03601e16ef.json  query-721e41a6fc3200ae0f894425f03f01df3eaa5bf89d26c620afa3098ddddcbf50.json  query-75f3f17f1c31b839a3d844933dfa6265e1fd930ef90494a7b374c8c57fa5936c.json  query-771ad6fab3fbed3aa0e9f08ea2399a9901ffd6c64f1b7d2d1f1ce37f5a85ac35.json  query-791b360eaad98a63a208bde9e66101fed435fd39f249df216c27f609a4ecb3d7.json  query-7c47c607f32395d9b5b5382b19268c4687b49c48cee05b073ab35eb08c8fa6a3.json  query-85eb36f1323282a9ec154533f2b9857057a50ed59ee28bd6eb520ebe4890f246.json  query-8ab234791d3cbc0a70e65ecdec98ddcb1f16aeefdaefe33a82b7da5a4a75092d.json  query-8d6a556b23554a1cba92dd1d7497769eab0645d79d6693e07e2aa45f420caf0d.json  query-9e26da8739ef4487f9f6138f7523491a6fdda85c7402717a07a73d3330a01e0e.json  query-a10d83e8df6a0da02d8fa59ad19f2bc1275d8abe936fe557f42f47f557ccaf56.json  query-a2505bc258ec2bd8830f8926f059985ebc28cacd737d29730393241e167aef63.json  query-a2522aef13ded48bbe1d7ec54f9d3ab94edbf95d36f6e0e56a6e209af417344d.json  query-a2b0f0d9047091be68a1304a53d9ed5d5d2977f11aca2de1164c3f8ac8f7f86b.json  query-a84a476d7898d54c072a97e43b2d7f1de5c3c0bbfd4a8e8ca9f397139d7c7eca.json  query-ac091c7d3fde022f8389a8fc66f0643a0c466168025148335bab1b2193807ef9.json  query-accc3834174e473facac69eb0db9656929a256366e951aa9ae79b3c3c2bd6b06.json  query-adfe3b53144b2563a6494fc9d920c12096d7c2075526096f2e7be9813ece3e01.json  query-b1f302be54e831f032dfb76e1005a1514c391e02b076eb48464a0df0695ce71c.json  query-c1c0b9f21753c2e672e54fa02bd0b152a6f8c0965e5f5d5e06d078a4ff941084.json  query-c6fe3e87492e4f792193256c2904afe2dafaaba280697264c2d26c6d9a52b936.json  query-c9884659d9c4b3efca789bf9ef22a4fcf052b80472b46bb73cd09ccda88f2306.json  query-ca825641c7189c34412755765165660bdcfdc254934759a53e1b7e5253aa73ff.json  query-eafce4f3fca215e05cfc13001b24c68532de3b5c7cdc60b0650e07143251a240.json  query-f6eb97e15c44b30186b7216c21517bf8a6a6b66b138215daeda3b7f5d1b1471f.json  query-feda5cf66d40e40c4fd5b9eef52f254c9ee75f3fa651dea925c2719b4f0e7e3d.json
crates/olai-store/migrations/: 0001_init.sql
crates/olai-store/migrations/postgres/: 0001_init.sql
crates/olai-store/migrations/sqlite/: 0001_init.sql
crates/olai-store/src/: conformance.rs  encryption.rs  error.rs  filter.rs  label.rs  lib.rs  managed.rs  name.rs  object.rs  reference.rs  registry.rs  secrets.rs  store.rs
crates/olai-store/src/backend/: mem.rs  mod.rs  (+4 more)
crates/stack-topology/: CHANGELOG.md  Cargo.toml  README.md
crates/stack-topology/examples/: render_stack.rs
crates/stack-topology/src/: artifacts.rs  catalog.rs  connection.rs  endpoint.rs  lib.rs  manifest.rs  module.rs  plan.rs  plan_env.rs  render.rs  report.rs  resolve.rs  resolve_graph.rs  role.rs  surface.rs
crates/stack-topology/tests/: golden_artifacts.rs  golden_lakehouse.rs  resource_demands.rs
crates/trestle/: CHANGELOG.md  Cargo.toml  README.md
crates/trestle/src/: embedded.rs  error.rs  lib.rs  main.rs
crates/trestle/tests/: scaffold.rs
examples/golden-path-app/: .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  app.yaml  buf.gen.connect.yaml  buf.gen.yaml  compose.yaml  databricks.yml  justfile  trestle.yaml
examples/golden-path-app/frontend/: index.html  package.json  tsconfig.json  vite.config.ts
examples/golden-path-app/notebooks/: 01_lakehouse_quickstart.py
(+367 files in other folders)
