[workspace]
resolver = "2"
members = ["crates/*"]
exclude = [
  # Templates are scaffolds containing project skeletons (frequently
  # uncompilable in isolation); they must never be picked up by `cargo build`.
  "crates/trestle/templates",
  # Opt-in buffa end-to-end fixture: pulls in buffa/buffa-build + protoc, kept
  # out of the default build/test. Run explicitly via its own --manifest-path.
  "crates/olai-codegen/tests/buffa_e2e",
  # Reference example: a self-contained scaffolded app with its own workspace.
  # Built on its own, never by the root build.
  "examples/*",
]

[workspace.package]
# Versions are managed per-crate (independent versioning) by release-plz —
# each crate owns its own `version` in its [package] section. See release-plz.toml.
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/open-lakehouse/trestle"
rust-version = "1.88"
homepage = "https://github.com/open-lakehouse/trestle"
keywords = ["lakehouse", "data-platform", "protobuf", "codegen", "resource-store"]

[workspace.dependencies]
# crates.io dependencies (in alphabetical order)
async-trait = "0.1"
bytes = "1.1"
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.14"
pbjson = "0.9"
pbjson-types = "0.9"
prost = "0.14"
prost-types = "0.14"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls-native-roots",
  "http2",
  "json",
  "stream",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = "0.8"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
# Pure-Rust TOML (de)serialization for the persisted environment manifest. Kept lean and
# wasm32-clean: no `default-features` (drops the indexmap-backed preserve-order machinery
# the manifest does not need; its types use BTreeMaps for deterministic order already).
toml = { version = "0.9", default-features = false, features = ["parse", "display", "serde"] }
tracing = { version = "0.1", features = ["log"] }
url = { version = "2.5", features = ["serde", "std"], default-features = false }
uuid = { version = "1", features = ["serde"] }

[profile.release]
lto = true
strip = true
codegen-units = 1

# Fast cold-start builds for CI: workspace crates compile cheaply (inherits
# dev), but incremental is off so sccache can populate the shared cache.
# Dependencies build at opt-level=3 with debuginfo stripped so the cached
# target/ stays small and tests run near release speed.
[profile.ci]
inherits = "dev"
debug = false
incremental = false

[profile.ci.package."*"]
opt-level = 3
debug = false
debug-assertions = false
strip = "debuginfo"

[workspace.metadata.typos]
default.extend-ignore-re = [
  "(?s)//\\s*spellchecker:ignore-next-line[^\\n]*\\n[^\\n]*",
  "(?s)(#|//|<\\!--)\\s*spellchecker:off.*?\\n\\s*(#|//|<\\!--)\\s*spellchecker:on",
  "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",
]
files.extend-exclude = ["crates/olai-codegen/src/gen/**/*"]

[workspace.metadata.typos.default.extend-words]
typ = "typ"
AKS = "AKS"
