[package]
name = "olai-codegen"
description = "Proto-driven code generation for REST handlers, clients, and resource registries"
version = "0.0.8"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[lib]
doctest = false

[dependencies]
# workspace dependencies (in alphabetical order)
itertools = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# crates.io dependencies (in alphabetical order)
convert_case = "0.7"
glob = "0.3"
prettyplease = "0.2"
proc-macro2 = "1.0"
protobuf = "3.0"
quote = "1.0"
serde_json = "1"
serde_yaml = "0.9"
syn = { version = "2.0", features = ["full", "parsing", "printing", "clone-impls"] }
textwrap = "0.16"

[dev-dependencies]
rstest = "0.23"
tempfile = "3"
