[package]
name = "olai-http"
description = "Cloud provider credential abstraction for AWS, Azure, and GCP"
version = "0.0.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
# workspace dependencies (in alphabetical order)
reqwest = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# crates.io dependencies (in alphabetical order)
async-trait = "0.1.53"
base64 = { version = "0.22", default-features = false, features = ["std"] }
bytes = "1.0"
# Optional: the ConnectRPC transport bridge (enabled by the `connectrpc` feature).
connectrpc = { version = "0.7", optional = true, default-features = false, features = [
  "client",
] }
chrono = { version = "0.4.34", default-features = false, features = [
  "clock",
  "serde",
] }
futures = "0.3"
http = "1"
# Optional: only needed by the `connectrpc` transport bridge to collect bodies.
http-body-util = { version = "0.1", optional = true }
humantime = "2.1"
hyper = { version = "1.2", default-features = false }
percent-encoding = "2.1"
quick-xml = { version = "0.37.0", features = ["serialize", "overlapped-lists"] }
rand = { version = "0.9", default-features = false, features = [
  "std",
  "std_rng",
  "thread_rng",
] }
ring = { version = "0.17", default-features = false, features = ["std"] }
rust-ini = "0.21"
rustls-pemfile = { version = "2.0", default-features = false, features = [
  "std",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tokio = { version = "1.29.0", features = [
  "sync",
  "macros",
  "rt",
  "time",
  "io-util",
] }
tracing = { version = "0.1" }
url = "2.2"

[dev-dependencies]
hyper = { version = "1.2", features = ["server"] }
hyper-util = "0.1"
http-body-util = "0.1"
tempfile = "3.1.0"
mockito = "1.4"

[features]
default = []
recording = []
# A `connectrpc::client::ClientTransport` backed by `CloudClient`, so generated
# ConnectRPC clients can authenticate against cloud-fronted servers. Pulls in
# `connectrpc` (raising the effective MSRV to 1.88) only when enabled.
connectrpc = ["dep:connectrpc", "dep:http-body-util"]

[package.metadata.cargo-machete]
ignored = ["rust-ini"]
