[package]
name = "olai-store"
description = "Generic, TAO-inspired object and association store with field-role enforcement"
version = "0.0.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
# workspace dependencies (in alphabetical order)
# AES-256-GCM envelope encryption for sensitive fields (behind the `encryption` feature).
aes-gcm = { workspace = true, optional = true }
async-trait = { workspace = true }
# base64url encoding of the opaque keyset pagination cursor.
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# convenience for downstream crates that want to use certain types with sqlx
sqlx = { workspace = true, optional = true, features = [
  "uuid",
  "macros",
  "chrono",
  "json",
] }
thiserror = { workspace = true }
# `sync` for the in-memory backend's owned transaction guard (`OwnedMutexGuard`).
tokio = { workspace = true, features = ["sync"] }
# Structured spans/events over the store's async operations. Always-on: disabled
# `tracing` macros compile to a cheap level check, so no feature gate is warranted.
tracing = { workspace = true }
# `v7` for time-ordered object and edge ids, so listings order (and page) by creation time.
uuid = { workspace = true, features = ["v7"] }
# Zeroize KEK material on drop (behind the `encryption` feature).
zeroize = { workspace = true, optional = true, features = ["derive"] }

[features]
default = []
sqlx = ["dep:sqlx"]
# Persistent sqlx-backed `SqlStore`.
sqlite = ["dep:sqlx", "sqlx/sqlite", "sqlx/runtime-tokio", "sqlx/migrate"]
postgres = ["dep:sqlx", "sqlx/postgres", "sqlx/runtime-tokio", "sqlx/migrate"]
# Envelope encryption for sensitive fields (`EnvelopeEncryptor`, `KeyProvider`).
encryption = ["dep:aes-gcm", "dep:zeroize"]

[dev-dependencies]
tokio = { version = "1.29.0", features = ["rt", "macros"] }
# Capture emitted spans/events to assert instrumentation fires and never leaks payloads.
tracing-test = "0.2"
# `v7` mints time-ordered object and edge ids in the in-memory backend.
uuid = { version = "1", features = ["v7"] }

[lints.rust]
# `docsrs` is set only by the docs.rs build (see `[package.metadata.docs.rs]`) to
# turn on the nightly `doc_cfg` feature; declare it so it isn't flagged as an
# unexpected cfg on ordinary builds.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs)'] }

# docs.rs builds default to default features only, which would hide every
# `sqlite` / `postgres` / `encryption` item (`SqlStore`, `EnvelopeEncryptor`, …)
# from the published docs. Build the full API and pass `--cfg docsrs` so
# feature-gated items render an "available on crate feature X" badge.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
