[package]
name = "olai-stack-topology"
description = "Role-, placement-, and gateway-aware addressing model for Lakehouse reference-architecture environments"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true
# Crate-local keywords: the workspace defaults (protobuf, codegen, …) describe
# the codegen crates, not this pure topology/addressing model.
keywords = ["lakehouse", "topology", "docker-compose", "service-discovery"]

[features]
# Off by default to keep the pure addressing core dependency-free.
default = []
# Build a catalog from on-disk `module.yaml` manifests (`Catalog::from_manifests`).
catalog = ["dep:serde_yaml"]
# Render the stack-aggregated text artifacts (Envoy config, Postgres init, `.env`,
# top-level compose) from an `EnvironmentPlan`.
render = []

[dependencies]
# workspace dependencies (in alphabetical order)
serde = { workspace = true }
serde_yaml = { workspace = true, optional = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
# Used by the golden-artifact tests to assert the rendered Envoy/compose output is
# valid YAML and to compare it semantically against the captured trestle fixtures.
serde_yaml = { workspace = true }
