[package]
name = "olai-stack-topology"
description = "Role-, placement-, and gateway-aware addressing model for Lakehouse reference-architecture environments"
version = "0.0.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true
# Crate-local keywords: the workspace defaults (protobuf, codegen, …) describe
# the codegen crates, not this pure topology/addressing model.
keywords = ["lakehouse", "topology", "docker-compose", "service-discovery"]

[features]
default = []
# Build a catalog from on-disk `module.yaml` manifests (`Catalog::from_manifests`).
catalog = ["dep:serde_yaml"]
# Write a `MaterializedOutput` to disk (`MaterializedOutput::write_to`). Off by default so the
# pure core stays WASM-clean — disk I/O is the only step that isn't.
std-io = []

[dependencies]
# workspace dependencies (in alphabetical order)
serde = { workspace = true }
serde_yaml = { workspace = true, optional = true }
thiserror = { workspace = true }
# TOML (de)serialization for the persisted `EnvManifest`. Non-optional: the pure
# `to_toml`/`from_toml` are always available (only the manifest's `read_from`/`write_to`,
# behind `std-io`, touch disk). The workspace pin is `default-features = false`, so it stays
# wasm32-clean.
toml = { workspace = true }
url = { workspace = true }
# Templating for the rendered stack artifacts (the Envoy gateway config). Rendering is
# always available and pure (it produces strings + filenames; the consumer owns disk I/O),
# so it is NOT feature-gated. `default-features = false` + `builtins` keeps it lean and
# wasm32-clean; `serde` lets the renderer take a `#[derive(Serialize)]` context;
# deliberately NO `loader` feature (it does filesystem globbing).
minijinja = { version = "2.19", default-features = false, features = ["builtins", "serde"] }

[dev-dependencies]
# Used by the golden-artifact tests to assert the rendered Envoy/compose output is
# valid YAML and to compare it semantically against the captured trestle fixtures.
serde_yaml = { workspace = true }

# Writes the materialized output to disk, so it needs the `std-io` feature.
[[example]]
name = "render_stack"
required-features = ["std-io"]
