[package]
# Published to crates.io as `olai-trestle` (`trestle` is taken). The binary is
# still `trestle` (see [[bin]] below), so `cargo install olai-trestle` installs
# a `trestle` command.
name = "olai-trestle"
description = "Unified CLI for proto-driven code generation and full-project scaffolding"
version = "0.0.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[lib]
doctest = false

[[bin]]
name = "trestle"
path = "src/main.rs"

[dependencies]
# `version` is required for `cargo publish` (a path-only dep can't be published).
# release-plz keeps this in sync whenever it bumps olai-codegen.
olai-codegen = { path = "../olai-codegen", version = "0.0.3" }
clap = { version = "4", features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
minijinja = { version = "2.19", features = ["loader", "json", "preserve_order"] }
rust-embed = { version = "8.11", features = ["debug-embed", "include-exclude"] }
cliclack = "0.5.4"
walkdir = "2.5"
regex = "1"
ignore = "0.4"
convert_case = "0.7"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
protobuf = "3.0"
tempfile = "3"

[dev-dependencies]
rstest = "0.23"
tempfile = "3"
walkdir = "2.5"
serde_yaml = "0.9"
regex = "1"
