[package]
name = "olai-trestle"
description = "Unified CLI for proto-driven code generation and full-project scaffolding"
version = "0.0.7"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[lib]
doctest = false

[[bin]]
name = "trestle"
path = "src/main.rs"

# cargo-binstall metadata. Binstall's defaults don't fit this crate: the release
# tag is `olai-trestle-v{version}` (not `v{version}`), and the package name
# (`olai-trestle`) differs from the binary name (`trestle`). These templates
# match the assets produced by `.github/workflows/release-binaries.yml`
# (taiki-e/upload-rust-binary-action, `archive: trestle-$target`, `tar=unix`,
# `leading-dir=true`), so `cargo binstall olai-trestle` resolves to the prebuilt
# archives.
#
# The extension is a literal `.tar.gz` (NOT `{ archive-format }`): binstall would
# render `{ archive-format }` as `tgz`, but upload-rust-binary-action always
# names its gzipped-tar asset `.tar.gz`. `pkg-fmt = "tgz"` is only the
# decompression hint (tgz == gzipped tar); it does not affect the URL here.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/olai-trestle-v{ version }/trestle-{ target }.tar.gz"
bin-dir = "trestle-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
# local crates (release-plz keeps versions in sync) (in alphabetical order)
olai-codegen = { path = "../olai-codegen", version = "0.0.8" }

# workspace dependencies (in alphabetical order)
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

# crates.io dependencies (in alphabetical order)
clap = { version = "4", features = ["derive", "env"] }
cliclack = "0.5.4"
convert_case = "0.7"
dirs = "5"
hex = "0.4"
ignore = "0.4"
minijinja = { version = "2.19", features = ["loader", "json", "preserve_order"] }
protobuf = "3.0"
regex = "1"
rust-embed = { version = "8.11", features = ["debug-embed", "include-exclude"] }
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"

[dev-dependencies]
rstest = "0.23"
tempfile = "3"
walkdir = "2.5"
serde_yaml = "0.9"
regex = "1"
