[workspace]
resolver = "2"
members = [
  "crates/common",
  "crates/server",
  "crates/client",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["your-org"]
repository = "https://github.com/your-org/golden-path-app"

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"
futures = "0.3"
olai-http = "0.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
buffa = "0.7"
buffa-types = "0.7"
async-trait = "0.1"
connectrpc = { version = "0.7", features = ["server", "axum"] }
http-body = "1"