# Opt-in end-to-end proof that trestle's `Runtime::Buffa` codegen produces a
# client that compiles against real `buffa`-generated models and round-trips JSON.
#
# This crate is intentionally EXCLUDED from the workspace (see the root
# Cargo.toml `exclude` list) so `buffa`/`buffa-build` and `protoc` are not pulled
# into the default `cargo build`/`cargo test`. Run it explicitly:
#
#     cargo test --manifest-path crates/olai-codegen/tests/buffa_e2e/Cargo.toml
#
# Requires `protoc` on PATH (buffa-build invokes it). The proto sources (with
# their google.api deps) are vendored under `proto/exported/` via `buf export`,
# so no network/buf is needed at test time.
[package]
name = "buffa-e2e"
version = "0.0.0"
edition = "2024"
publish = false

[features]
# Compiles the generated `pyo3_impls.rs` (FromPyObject/IntoPyObject for the buffa
# model types) and the PyO3 round-trip test. Off by default so the base fixture
# stays pyo3-free; the dedicated test below runs it with `--features python`.
python = ["dep:pyo3", "dep:pythonize"]

[dependencies]
# local crates (in alphabetical order)
olai-http = { path = "../../../olai-http" }

# crates.io dependencies (in alphabetical order)
async-trait = "0.1"
buffa = { version = "0.7", features = ["json"] }
buffa-types = "0.7"
futures = "0.3"
pyo3 = { version = "0.26", optional = true }
pythonize = { version = "0.26", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"

[build-dependencies]
# local crates (in alphabetical order)
olai-codegen = { path = "../../" }

# crates.io dependencies (in alphabetical order)
buffa-build = "0.7"
protobuf = "3"

# cargo-machete can't see these: they're exercised through code generated at
# build time (the buffa client traits + models) rather than referenced directly
# in this crate's source, so its static scan reports them as unused.
[package.metadata.cargo-machete]
# pyo3/pythonize are exercised only through the build-time-generated
# `pyo3_impls.rs` (under the `python` feature), so machete's static scan can't
# see them.
ignored = ["async-trait", "buffa-types", "futures", "serde", "pyo3", "pythonize"]
