[package]
name = "golden-path-app-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
golden-path-app-common = { path = "../common" }
reqwest = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
olai-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
buffa = { workspace = true, features = ["json"] }
buffa-types = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }