[package]
name = "golden-path-app-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# The generated request extractors (`models/_gen/<service>/server.rs`) are
# axum-coupled and gated behind `#[cfg(feature = "axum")]`. The server crate
# enables this feature; pure-model consumers (clients, bindings) leave it off so
# the models crate stays transport-neutral.
axum = ["dep:axum"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
buffa = { workspace = true, features = ["json"] }
buffa-types = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true, optional = true }